<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreateAlbumFragment">

    <data>
        <variable name="AlbumViewModel" type="com.example.vinilosgrupo3.viewmodels.AlbumViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:hint="@string/album_name_edit"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:text="@={AlbumViewModel.nameAlbum}"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/album_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_cover_edit"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/album_name"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_cover_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:text="@={AlbumViewModel.coverAlbum}"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/album_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_release_date_edit"
            android:textColorHint="@color/black"
            app:counterTextColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/album_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_releaseDate_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/album_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description_edit"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/album_releaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_description_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/álbum_genero"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/album_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_spinner_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/album_genre_edit"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/spinner_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_record_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sello_discografico"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/label_spinner_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_spinner_record_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/album_record_label_edit"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/spinner_record_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/button_create_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_create_album"
            android:textColor="#4527A0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_cancel_create_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/button_cancel_create_album"
            android:textColor="#4527A0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>