<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos Grupo 3</string>

    <string name="action_albumes">Álbumes</string>
    <string name="action_artistas">Artistas</string>
    <string name="action_collectors">Coleccionistas</string>

    <string name="selected_item">Selected item:</string>
    <string name="action_settings">Configuración</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Regresar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comment_rating_placeholder">##</string>
    <string name="album_name_placeholder">Nombre del album</string>
    <string name="album_description_placeholder">Descripcion del album</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_albums">Albums</string>
    <string name="title_create_albums">Crear Albums</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="album_details">Detalles del álbum</string>
    <string name="collector_details">Detalles del coleccionista</string>
    <string name="txt_no_detail">No hay detalles de este álbum</string>
    <string name="album_description">Descripción del álbum</string>
    <string name="album_genre">Género: </string>
    <string name="album_release_date">Fecha lanzamiento: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_collector">Coleccionista</string>
    <string name="button_visitor">Visitantes</string>
    <string name="button_create_album">Crear Album</string>
    <string name="button_cancel_create_album">Cancelar</string>
    <string name="button_add_track">Agregar Track</string>
    <string name="home_image">Imagen del home de la aplicación</string>

    <string name="title_musicians">Artistas</string>
    <string name="txt_no_musician_detail">No hay detalles de este artista</string>
    <string name="musician_details">Detalles del artista</string>
    <string name="musician_birth_date">Fecha de nacimiento: </string>

    <string name="album_name_edit">Nombre Album</string>
    <string name="album_cover_edit">Cover Album</string>
    <string name="album_release_date_edit">Fecha Lanzamiento Album</string>
    <string name="album_description_edit">Descripción Album</string>
    <string name="album_genre_edit">Género Album</string>
    <string name="album_record_label_edit">Sello Discografico Album</string>
    <string name="track_duration">Duración</string>
    <string name="track_name">Nombre del track</string>
    <string name="title_add_track">Agregar track</string>

    <string-array name="Genre">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="RecordLabel">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>


</resources>