<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="musiciandetail" type="com.example.vinilosgrupo3.models.Musician"/>
        <variable name="musicianDetailViewModel" type="com.example.vinilosgrupo3.viewmodels.MusicianDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/black_overlay"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_artist_detalle"></ImageView>

                <ImageView
                    android:id="@+id/detail_musician_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_detail_artist"
                    android:image="@{musiciandetail.image}" />

                <TextView
                    android:id="@+id/detail_musician_name_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:text="@{musiciandetail.name}"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorLink="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_musician_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:text="@{musiciandetail.description}"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorLink="@color/black" />

                <TextView
                    android:id="@+id/detail_musician_birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:text='@{@string/musician_birth_date+musiciandetail.birthDate}'
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorLink="@color/black" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>